After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 773313 - decklinkaudiosrc: Ignore channel-mask when checking set_caps compatibility
decklinkaudiosrc: Ignore channel-mask when checking set_caps compatibility
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.10.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-10-21 11:34 UTC by Vivia Nikolaidou
Modified: 2016-11-04 17:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
0001-decklinkaudiosrc-Ignore-channel-mask-when-checking-s.patch (2.05 KB, patch)
2016-10-21 11:35 UTC, Vivia Nikolaidou
none Details | Review
0001-decklinkaudiosrc-Ignore-channel-mask-when-checking-s.patch (1.79 KB, patch)
2016-10-21 11:39 UTC, Vivia Nikolaidou
committed Details | Review

Description Vivia Nikolaidou 2016-10-21 11:34:30 UTC
channel-mask doesn't matter in decklinkaudiosrc, and differences in it
    can cause caps negotiations to fail without a real reason.
Comment 1 Vivia Nikolaidou 2016-10-21 11:35:12 UTC
Created attachment 338183 [details] [review]
0001-decklinkaudiosrc-Ignore-channel-mask-when-checking-s.patch
Comment 2 Vivia Nikolaidou 2016-10-21 11:39:56 UTC
Created attachment 338184 [details] [review]
0001-decklinkaudiosrc-Ignore-channel-mask-when-checking-s.patch
Comment 3 Sebastian Dröge (slomo) 2016-11-01 17:46:25 UTC
commit ab991db7edb0cc63ee4ee2a6da8487d9561942b8
Author: Vivia Nikolaidou <vivia@toolsonair.com>
Date:   Fri Oct 21 14:01:11 2016 +0300

    decklinkaudiosrc: Ignore channel-mask when checking set_caps compatibility
    
    channel-mask doesn't matter in decklinkaudiosrc, and differences in it
    can cause caps negotiations to fail without a real reason.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=773313