decklinkaudiosrc: Ignore channel-mask when checking set_caps compatibility

channel-mask doesn't matter in decklinkaudiosrc, and differences in it
can cause caps negotiations to fail without a real reason.

https://bugzilla.gnome.org/show_bug.cgi?id=773313